--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.ac.gachon.www.GachonGroup">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".LoadActivity">
@@ -26,7 +27,8 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".GroupListActivity" />
         <activity android:name=".modules.FirebaseHelper" />
-        <activity android:name=".GroupMenuActivity"></activity>
+        <activity android:name=".GroupMenuActivity" />
+        <activity android:name=".MyInformationActivity"></activity>
     </application>
 
 </manifest>
