--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -28,7 +30,8 @@
         <activity android:name=".GroupListActivity" />
         <activity android:name=".modules.FirebaseHelper" />
         <activity android:name=".GroupMenuActivity" />
-        <activity android:name=".MyInformationActivity"></activity>
+        <activity android:name=".MyInformationActivity" />
+        <activity android:name=".EditMyInformationActivity"></activity>
     </application>
 
 </manifest>
