--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
@@ -31,7 +30,9 @@
         <activity android:name=".modules.FirebaseHelper" />
         <activity android:name=".GroupMenuActivity" />
         <activity android:name=".MyInformationActivity" />
-        <activity android:name=".EditMyInformationActivity"></activity>
+        <activity android:name=".EditMyInformationActivity" />
+        <activity android:name=".GroupScheduleActivity" />
+        <activity android:name=".PRBoardActivity"></activity>
     </application>
 
 </manifest>
