--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -32,7 +31,8 @@
         <activity android:name=".MyInformationActivity" />
         <activity android:name=".EditMyInformationActivity" />
         <activity android:name=".GroupScheduleActivity" />
-        <activity android:name=".PRBoardActivity"></activity>
+        <activity android:name=".PRBoardActivity" />
+        <activity android:name=".PRSearchActivity"></activity>
     </application>
 
 </manifest>
