소개글 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".GroupScheduleActivity" />
         <activity android:name=".PRBoardActivity" />
         <activity android:name=".PRSearchActivity" />
-        <activity android:name=".BoardActivity"></activity>
+        <activity android:name=".BoardActivity" />
+        <activity android:name=".IntroduceActivity"></activity>
     </application>
 
 </manifest>
