연합회 공지사항 및 문의사항 UI 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
         <activity android:name=".PRBoardActivity" />
         <activity android:name=".PRSearchActivity" />
         <activity android:name=".BoardActivity" />
-        <activity android:name=".IntroduceActivity"></activity>
+        <activity android:name=".IntroduceActivity" />
+        <activity android:name=".RequirementsActivity" />
+        <activity android:name=".FederationNoticeActivity"></activity>
     </application>
 
 </manifest>
