비밀번호 암호화 및 댓글 삭제, 권한 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".JoinRequest.JoinRequsetLogDetailActivity"></activity>
+        <activity android:name=".Group.GroupJoinRequestLogActivity"></activity>
+        <activity android:name=".JoinRequest.JoinRequsetLogDetailActivity" />
         <activity android:name=".JoinRequest.JoinRequestLogActivity" />
         <activity android:name=".JoinRequest.JoinRequestActivity" />
         <activity android:name=".Board.AccuseActivity" />
