--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
     implementation files('libs/commons-codec-1.10.jar')
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 }
