--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'com.github.prolificinteractive:material-calendarview:1.4.3'
     implementation files('libs/commons-codec-1.10.jar')
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
+
 }
