--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Manager.RequirementsLogDetialActivity"></activity>
+        <activity android:name=".Account.NoteDetailActivity"></activity>
+        <activity android:name=".Account.NoteListActivity" />
+        <activity android:name=".Manager.RequirementsLogDetialActivity" />
         <activity android:name=".Manager.RequirementLogActivity" />
         <activity android:name=".Manager.AccuseLogDetailActivity" />
         <activity android:name=".Manager.AccuseLogActivity" />
